# trls

./: .gitignore  Cargo.toml  README.md  arch-ostree  arch-ostree.config.example  justfile  trellis.conf.example  trellis.config.example  trellis.toml.example  trls
examples/: Containerfile.full
hooks/: 50-dracut-setup.sh  50-sbctl-sign.sh
lib/: commit_rootfs
share/: Containerfile.builder  build-aur.sh
src/: cli.rs  config.rs  lib.rs  main.rs  trellis.rs
src/config/: lib.rs  merger.rs  mod.rs  validator.rs
src/trellis/: builder.rs  cleaner.rs  common.rs  constants.rs  discovery.rs  executor.rs  image_generator.rs  mod.rs  runner.rs
tests/: command_execution_tests.rs  config_tests.rs  container_builder_tests.rs  container_runner_tests.rs  containerfile_discovery_tests.rs  error_handling_tests.rs  error_scenario_tests.rs  executor_tests.rs  image_cleaner_tests.rs  image_generator_tests.rs  integration_tests.rs  messaging_tests.rs  quick_update_tests.rs  trellis_app_tests.rs  trellis_core_tests.rs  unit_tests.rs
tests/common/: isolation.rs  mocks.rs  mod.rs
