[package]
name = "trellis"
version = "0.1.0"
edition = "2021"
description = "A container build system for multi-stage builds"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "trls"
path = "src/main.rs"