[package]
name = "trellis"
version = "0.1.0"
edition = "2021"
description = "A container build system for multi-stage builds"
authors = ["Joe Maples <joe@maples.dev>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
libc = "0.2"
walkdir = "2.5"
which = "8.0"
lru = "0.16"
uuid = { version = "1.6", features = ["v4"] }
sha-crypt = "0.5" # For SHA-512 password hashing

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
cargo-tarpaulin = "0.32"
mockall = "0.13"
serial_test = "3.1"

[[bin]]
name = "trls"
path = "src/main.rs"
